add: GET hints API を作成
